# agentscrub

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml  test.yml
scripts/: pre-commit-pytest.sh
src/agentscrub/: backup.py  cache.py  cli.py  discover.py  installers.py  pii_rampart.py  redact.py  schedule.py  secrets.py  splash.txt
tests/: conftest.py  test_backup.py  test_backup_orchestration.py  test_cache.py  test_cli_smoke.py  test_discover.py  test_installers.py  test_pii_rampart.py  test_redact.py  test_schedule.py  test_secrets.py  test_secrets_collect.py
