[build-system]
requires = ["setuptools==78.1.1"]
build-backend = "setuptools.build_meta"

[project]
name = "agentscrub"
version = "1.1.18"
description = "Scrub secrets and credentials from AI coding assistant session logs"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
keywords = ["security", "privacy", "ai", "claude", "codex", "cursor", "redact", "secrets"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Utilities",
]
dependencies = [
    "cryptography==46.0.7",
    "rich==14.3.4",
    "cffi==2.0.0; platform_python_implementation != 'PyPy'",
    "typing-extensions==4.15.0; python_version < '3.11'",
    "markdown-it-py==3.0.0",
    "mdurl==0.1.2",
    "pygments==2.20.0",
    "pycparser==3.0; platform_python_implementation != 'PyPy'",
]

[project.urls]
Homepage   = "https://github.com/ppravdin/agentscrub"
Repository = "https://github.com/ppravdin/agentscrub"
Issues     = "https://github.com/ppravdin/agentscrub/issues"

[project.scripts]
agentscrub = "agentscrub.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
agentscrub = ["splash.txt"]
