[build-system]
requires = ["setuptools==75.3.4"]
build-backend = "setuptools.build_meta"

[project]
name = "agentscrub"
version = "1.1.22"
description = "Scrub secrets and credentials from AI coding assistant session logs"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
keywords = ["security", "privacy", "ai", "claude", "codex", "cursor", "redact", "secrets"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Utilities",
]
dependencies = [
    "cryptography>=46.0.7",
    "rich>=13.0.0",
    "cffi>=1.15.0; platform_python_implementation != 'PyPy'",
    "typing-extensions>=4.0.0; python_version < '3.11'",
    "markdown-it-py>=3.0.0",
    "mdurl>=0.1.0",
    "pygments>=2.15.0",
    "pycparser>=2.21; platform_python_implementation != 'PyPy'",
]

[project.urls]
Homepage   = "https://github.com/ppravdin/agentscrub"
Repository = "https://github.com/ppravdin/agentscrub"
Issues     = "https://github.com/ppravdin/agentscrub/issues"

[project.scripts]
agentscrub = "agentscrub.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
agentscrub = ["splash.txt"]
