[build-system]
requires = ["setuptools>=78.1.1"]
build-backend = "setuptools.build_meta"

[project]
name = "agentscrub"
version = "1.1.31"
description = "Scrub secrets and credentials from AI coding assistant session logs"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
keywords = ["security", "privacy", "ai", "claude", "codex", "cursor", "redact", "secrets"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Utilities",
]
dependencies = [
    "cryptography>=46.0.7",
    "rich>=13.0.0",
    "cffi>=1.15.0; platform_python_implementation != 'PyPy'",
    "typing-extensions>=4.0.0; python_version < '3.11'",
    "markdown-it-py>=3.0.0",
    "mdurl>=0.1.0",
    "pygments>=2.15.0",
    "pycparser>=2.21; platform_python_implementation != 'PyPy'",
]

[project.optional-dependencies]
pii = [
    "onnxruntime>=1.19",
    "transformers>=4.30",
    "huggingface-hub>=0.20",
    "numpy>=1.24",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.9.0",
    "pre-commit>=4.0",
    "build>=1.0",
]

[project.urls]
Homepage   = "https://github.com/ppravdin/agentscrub"
Repository = "https://github.com/ppravdin/agentscrub"
Issues     = "https://github.com/ppravdin/agentscrub/issues"

[project.scripts]
agentscrub = "agentscrub.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
agentscrub = ["splash.txt"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q --strict-markers --cov-fail-under=65"
markers = [
    "needs_grep: requires grep(1) on PATH",
]

[tool.coverage.run]
source = ["agentscrub"]
branch = true
omit = ["src/agentscrub/cli.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"src/agentscrub/cli.py" = ["E701", "E702", "E401", "F841", "F541", "B007"]
"src/agentscrub/redact.py" = ["E402", "E741"]
"src/agentscrub/schedule.py" = ["E741"]
